--- a/index.html
+++ b/index.html
@@ -8,6 +8,44 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    
+    <div class="container">
+
+        <div class="title">
+            <div class="presentation">
+                <h1>Jeanne S. Dev</h1>
+                <p>Découvrez nos produits</p>
+                <br>
+                <a href="#" class="bouton">Contactez-nous</a>
+            </div>
+        </div>
+
+        <div class="boxCartes">
+            <div class="cards">
+
+                <a href="#" class="stack">
+                    <div class="card">
+                        <div class="contents">
+                            <h2><strong>J</strong>eanne <strong>S</strong>. <strong>D</strong>ev</h2>
+                            <h3>Jeanne S. Dev</h3>
+                            <h4>Web Developper/Integrator</h4>
+                            <br>
+                            <p><span>📧</span> 
+                            angeliquejeanne.simon@gmail.com</p>
+                            <br>
+                            <p><span>📱</span>  
+                            +33 621 088 320</p>
+                            <br>
+                            <p>rue du Pont de Bois
+                            <br>
+                            59280 Armentières</p>
+                        </div>
+                    </div>
+                </a>
+
+
+            </div>
+        </div>
+
+    </div>
 </body>
 </html>
