--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
                 <h1>Jeanne S. Dev</h1>
                 <p>Découvrez nos produits</p>
                 <br>
-                <a href="#" class="bouton">Contactez-nous</a>
+                <a class="bouton" onclick="location.href='mailto:angeliquejeanne.simon@gmail.com';">Contactez-nous</a>
             </div>
         </div>
 
